@@ -4,16 +4,12 @@ import rs.ac.bg.etf.domain.connection.Connection;
 import rs.ac.bg.etf.domain.event.Event;
 import rs.ac.bg.etf.domain.exceptions.DelayNegativeException;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 
 /**
- * Value here depicts current value produced by the Component in discrete moment t. This value is meant to change
- * with time.
+ * Class {@code Component<V>} serves as root class depicting key component API.
  *
- * @param <V>
+ * @param <V> type parameter of component's value
  *
  */
 public abstract class Component<V> {
@@ -21,18 +17,17 @@ public abstract class Component<V> {
 	private final ComponentPort<V> inputPort;
 	private final ComponentPort<V> outputPort;
 	private final long delay;
-	private final List<Connection> outgoing;
+	private List<Connection> outgoing;
 
 
-	protected Component(ComponentId componentId, ComponentPort<V> inputPort, ComponentPort<V> outputPort, long delay,
-	                    List<Connection> outgoing) {
+	protected Component(ComponentId componentId, ComponentPort<V> inputPort, ComponentPort<V> outputPort, long delay) {
 		if (delay < 0) throw new DelayNegativeException();
 
 		this.componentId = componentId;
 		this.inputPort = Objects.requireNonNull(inputPort);
 		this.outputPort = Objects.requireNonNull(outputPort);
 		this.delay = delay;
-		this.outgoing = List.copyOf(outgoing);
+		this.outgoing = Collections.emptyList();
 	}
 
 	@Override
@@ -63,6 +58,26 @@ public abstract class Component<V> {
 		return outputPort;
 	}
 
+	public long delay() {
+		return delay;
+	}
+
+	public List<Connection> outgoingConnections() {
+		return List.copyOf(outgoing);
+	}
+
+
+	/**
+	 * A method that acts as mutator/setter method of outgoing component's connections, since this structure will be
+	 * only provided after instantization of concrete component classes. Since the reference is younger than the
+	 * component it will be additionally provided with respect of field referencing an empty list upon initialization.
+	 *
+	 * @param outgoing {@code List<Connection>} list of component's outgoing connections.
+	 */
+	public void attachOutgoingConnections(List<Connection> outgoing) {
+		this.outgoing = List.copyOf(outgoing);
+	}
+
 	/**
 	 * Method that returns value of the component in some discrete moment. Currently, assumption is that there is only
 	 * one output port which also serves as the value holder of component, so the return value is the actual value on
@@ -85,25 +100,22 @@ public abstract class Component<V> {
 		return inputValues;
 	}
 
-	public long delay() {
-		return delay;
-	}
-
-	public List<Connection> outgoingConnections() {
-		return List.copyOf(outgoing);
-	}
 
 	@Override
 	public String toString() {
-		return "Component{" +
-				"componentId=" + componentId +
-				", inputPort=" + inputPort +
-				", outputPort=" + outputPort +
-				", delay=" + delay +
-				", value=" + value().toString() +
-				'}';
+		return "Component{" + "componentId=" + componentId + ", inputPort=" + inputPort + ", outputPort=" + outputPort + ", delay=" + delay + ", outgoing=" + outgoing + '}';
 	}
 
-
+	/**
+	 * <p>
+	 * Key method of distributed component's value evaluation. Adequate list of events is forwarded only upon
+	 * achieving the internal component invariant state; otherwise no interaction with the rest of network is attained.
+	 * The concrete computation is delegated to subclasses.
+	 * </p>
+	 *
+	 * @param msg {@code Event<V>} a message received on component's input port.
+	 * @return {@code List<Event<V>>} list of events as response to received message. If component's state invariant
+	 * is not achieved, empty list is returned and no events are forwarded along the pipeline i.e. Netlist.
+	 */
 	public abstract List<Event<V>> execute(Event<V> msg);
 }
